Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35769

FileDialog doesn't use native widget if you have subclassed QApplication

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.2.1
    • 5.2.0, 5.3.0
    • Quick: Dialogs
    • None
    • Debian jessie, x64
    • 76952046ceccf2cd176a3452bc908cac769f90d9 acfcbd620b0ceb1f11a3fcf2439127e1558d9d01

      If you don't use QApplication directly but have a subclass of it instead, you get a style of FileDialog that isn't the native one and isn't really usable.

      See the attached example files.

        1. main.cpp
          0.5 kB
        2. qmltest.pro
          0.1 kB
        3. test.qml
          0.4 kB
        For Gerrit Dashboard: QTBUG-35769
        # Subject Branch Project Status CR V

            srutledg Shawn Rutledge
            djf David Fletcher
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes